fix blog article not showing

--- a/assets/sass/partials/_blog.scss
+++ b/assets/sass/partials/_blog.scss
@@ -33,9 +33,8 @@
         margin: 0;
         @media screen and (min-width: 560px) {
             flex-direction: row;
-            justify-content: center;
+            justify-content: flex-start;
         }
-        @media screen and (min-width:980px) {}
     }
     .flex-2-cols__col {
         width: 100%;
